force-app/main/default/objects/Job_Board_Search__c/Job_Board_Search__c.object-meta.xml
<CustomObject>
    <label>Job Board Search</label>
    <nameField>
        <label>Codes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Board Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>