force-app/main/default/objects/Job_Board_Search__c/fields/Html_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Html_Parameters__c</fullName>
    <label>Html Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>