force-app/main/default/objects/Job_Board_Search__c/fields/Is_Watch_Dog__c.field-meta.xml
<CustomField>
    <fullName>Is_Watch_Dog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Watch Dog</label>
    <type>Checkbox</type>
</CustomField>