force-app/main/default/objects/Job_Board_Search__c/fields/Previous_Search_Candidate_Profile_Ids__c.field-meta.xml
<CustomField>
    <fullName>Previous_Search_Candidate_Profile_Ids__c</fullName>
    <label>Previous Search Candidate Profile Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>